# CrossChronox

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .prettierrc  .rustfmt.toml  Cargo.toml  CrossChronox.sln  README.md  build.rs  format.sh  vcpkg.json
CrossChronox/: Application.cpp  Application.hpp  CrossChronox-Info.plist  CrossChronox.vcxproj  CrossChronox.vcxproj.filters  Exception.hpp  KeyConfig_Default.json  main.cpp  packages.config  pch.cpp  pch.hpp
CrossChronox.xcodeproj/: project.pbxproj
CrossChronox.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CrossChronox/Filesystem/: MD5.cpp  MD5.hpp  Path.cpp  Path.hpp  ScoreDirectoryInfo.cpp  ScoreDirectoryInfo.hpp  ScoreDirectoryLoader.cpp  ScoreDirectoryLoader.hpp  ScoreInfoBase.cpp  ScoreInfoBase.hpp
CrossChronox/Input/: InputManager.cpp  InputManager.hpp
CrossChronox/Path/: Path.hpp  Path_macOS.mm
CrossChronox/Platform/: MessageBox.hpp  MessageBox_macOS.mm  Path.hpp  Path_Windows.cpp  Path_macOS.mm
CrossChronox/Scene/: Fade.cpp  Fade.hpp  MusicSelect.cpp  MusicSelect.hpp  PlayScore.cpp  PlayScore.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SelectMusic.cpp  SelectMusic.hpp
CrossChronox/Score/: BmsLoader.cpp  BmsLoader.hpp  BmsParser.cpp  BmsParser.hpp  MD5.cpp  MD5.hpp  Result.cpp  Result.hpp  ScoreData.cpp  ScoreData.hpp  ScoreInfo.cpp  ScoreInfo.hpp  ScoreParser.cpp  ScoreParser.hpp  (+12 more)
Dependencies/: readme.txt
astah/: Classes Manage Scenes.asta  Classes Playing Sounds.asta  クラス図0.asta
cpp/: Application.cpp  Application.hpp  pch.cpp  pch.hpp
src/: main.rs
(+118 files in other folders)
